apps/base/3x-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: panel
  labels:
    app.kubernetes.io/name: 3x-ui
    app.kubernetes.io/part-of: 3x-ui
spec:
  ports:
  - port: 2053
    protocol: TCP
    targetPort: 2053
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  selector:
    app.kubernetes.io/name: 3x-ui
    app.kubernetes.io/part-of: 3x-ui
  type: LoadBalancer
